turtleart.square.Square.scala.error
Compilation error:
Square:1: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
override def run() {avance()
                          ^